# flet-storage

./: .gitignore  README.md  README.uk.md  pyproject.toml  requirements.txt
.agents/skills/flet-storage/: SKILL.md
src/flet_storage/: __init__.py  base.py  flet_storage.py
