[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flet-storage"
version = "1.1.1"
authors = [
    { name = "Andrii Bogdanovych", email = "a@bogdanovych.org" }
]
description = "A lightweight utility for simplified client-side storage management in Flet applications."
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "flet==0.82.2",
]
[dependency-groups]
dev = [
    "flet-cli==0.82.2",
    "flet-desktop-light==0.82.2",
    "flet-web==0.82.2",
    "build>=1.4.0",
    "pre_commit>=4.5.1",
    "black==26.3.1",
    "isort>=8.0.1",
    "twine>=6.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Repository = "https://github.com/BogdanovychA/flet-storage"
"Bug Tracker" = "https://github.com/BogdanovychA/flet-storage/issues"
"AI Agent Skill" = "https://skills.sh/bogdanovycha/flet-storage/flet-storage"
